src/parser/tests/snapshots/rusty__parser__tests__type_parser_tests__enum_with_equality_operator_instead_of_assignment_should_error-2.snap
---
source: src/parser/tests/type_parser_tests.rs
expression: result.user_types
---
[
    UserTypeDeclaration {
        data_type: EnumType {
            name: Some(
                "State",
            ),
            numeric_type: "DINT",
            elements: ExpressionList {
                expressions: [
                    Assignment {
                        left: ReferenceExpr {
                            kind: Member(
                                Identifier {
                                    name: "Idle",
                                },
                            ),
                            base: None,
                        },
                        right: LiteralInteger {
                            value: 0,
                        },
                    },
                    BinaryExpression {
                        operator: Equal,
                        left: ReferenceExpr {
                            kind: Member(
                                Identifier {
                                    name: "Running",
                                },
                            ),
                            base: None,
                        },
                        right: LiteralInteger {
                            value: 1,
                        },
                    },
                ],
            },
        },
        initializer: None,
        scope: None,
    },
]
