src/parser/tests/snapshots/rusty__parser__tests__type_parser_tests__global_pointer_declaration-2.snap
---
source: src/parser/tests/type_parser_tests.rs
expression: pointer_type
---
Variable {
    name: "SamplePointer",
    data_type: DataTypeDefinition {
        data_type: PointerType {
            name: None,
            referenced_type: DataTypeReference {
                referenced_type: "INT",
            },
        },
    },
}
