src/parser/tests/snapshots/rusty__parser__tests__type_parser_tests__global_pointer_declaration-3.snap
---
source: src/parser/tests/type_parser_tests.rs
expression: diagnostics
---
warning: `POINTER TO` is not a standard keyword, use `REF_TO` instead
  ┌─ <internal>:4:29
  │
4 │             SamplePointer : POINTER TO INT;
  │                             ^^^^^^^ `POINTER TO` is not a standard keyword, use `REF_TO` instead


