src/parser/tests/snapshots/rusty__parser__tests__type_parser_tests__multi_dimensional_variable_length_arrays_can_be_parsed.snap
---
source: src/parser/tests/type_parser_tests.rs
expression: var
---
Variable {
    name: "x",
    data_type: DataTypeDefinition {
        data_type: ArrayType {
            name: None,
            bounds: ExpressionList {
                expressions: [
                    VlaRangeStatement,
                    VlaRangeStatement,
                ],
            },
            referenced_type: DataTypeReference {
                referenced_type: "INT",
            },
            is_variable_length: true,
        },
    },
}
