src/parser/tests/snapshots/rusty__parser__tests__type_parser_tests__multi_type_declaration.snap
---
source: src/parser/tests/type_parser_tests.rs
expression: result
---
CompilationUnit {
    global_vars: [],
    var_config: [],
    pous: [],
    implementations: [],
    interfaces: [],
    user_types: [
        UserTypeDeclaration {
            data_type: StructType {
                name: Some(
                    "Point2D",
                ),
                variables: [
                    Variable {
                        name: "x",
                        data_type: DataTypeReference {
                            referenced_type: "INT",
                        },
                    },
                    Variable {
                        name: "y",
                        data_type: DataTypeReference {
                            referenced_type: "INT",
                        },
                    },
                ],
            },
            initializer: None,
            scope: None,
        },
        UserTypeDeclaration {
            data_type: StructType {
                name: Some(
                    "Point3D",
                ),
                variables: [
                    Variable {
                        name: "x",
                        data_type: DataTypeReference {
                            referenced_type: "INT",
                        },
                    },
                    Variable {
                        name: "y",
                        data_type: DataTypeReference {
                            referenced_type: "INT",
                        },
                    },
                    Variable {
                        name: "z",
                        data_type: DataTypeReference {
                            referenced_type: "INT",
                        },
                    },
                ],
            },
            initializer: None,
            scope: None,
        },
    ],
    file: File(
        "test.st",
    ),
    linkage: Internal,
    namespace: None,
}
