src/parser/tests/snapshots/rusty__parser__tests__type_parser_tests__simple_enum_type_can_be_parsed.snap
---
source: src/parser/tests/type_parser_tests.rs
expression: "result.types[0]"

---
UserTypeDeclaration {
    data_type: EnumType {
        name: Some(
            "SampleEnum",
        ),
        numeric_type: None,
        elements: ExpressionList {
            expressions: [
                Reference {
                    name: "red",
                },
                Reference {
                    name: "yellow",
                },
                Reference {
                    name: "green",
                },
            ],
        },
    },
    initializer: None,
    scope: None,
}
